# ser_client-ftps

./: .gitignore  BUILD_GUIDE.md  README.md  pyproject.toml
examples/: basic_usage.py
src/ser_client_ftps/: __init__.py  client.py
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py
