[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ser_client-ftps"
version = "0.3.0"
description = "Secure FTPS client with mutual SSL authentication for CAD medical institutions"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
]
dependencies = [
    "ftputil>=5.0.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-mock",
    "black",
    "isort",
    "flake8",
]


[project.urls]
Homepage = "https://github.com/GenomeCAD/ser_client-ftps"
Documentation = "https://github.com/GenomeCAD/ser_client-ftps#readme"
Repository = "https://github.com/GenomeCAD/ser_client-ftps"
Issues = "https://github.com/GenomeCAD/ser_client-ftps/issues"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (adjust as needed)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/ser_client_ftps --cov-report=html --cov-report=term"